--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Thinkgamer的博客
+title: 文艺与Code | Thinkgamer的博客
 subtitle: 机器学习／python／云计算
 description: 沈阳航空航天大学计算机院系，就职于北京万维星辰科技有限公司，主要研究数据挖掘，机器学习，云计算。
 author: Thinkgamer
